[package]
name = "bitstream-rs"
version = "0.2.0"
repository = "https://github.com/WanzenBug/bitstream"
license = "MIT"
description = "Crate for reading and writing single bit values from ordinary Readers and Writers"
documentation = "https://docs.rs/bitstream-rs/"

readme = "README.md"

authors = ["WanzenBug <moritz.wanzenboeck@gmail.com>"]

[lib]
name = "bitstream"
path = "src/lib.rs"
